<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="habit"
            type="com.example.habittracker.data.model.Habit" />

        <variable
            name="listener"
            type="com.example.habittracker.ui.dashboard.HabitClickListener" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- HEADER -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgIcon"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:background="@drawable/icon_circle_bg"
                    android:padding="8dp"
                    android:src="@{habit.icon}"
                    android:contentDescription="@string/habit_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{habit.name}"
                        android:textColor="#222222"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:onClick="@{() -> listener.onHabitClick(habit)}"/>

                    <TextView
                        android:id="@+id/txtDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@{habit.description}"
                        android:textColor="#777777"
                        android:textSize="14sp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/txtStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="6dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:habitStatus="@{habit}"/>

            </LinearLayout>

            <!-- Progress -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/progress_label"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtProgress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    app:progressText="@{habit}"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="10dp"
                app:maxValue="@{habit.goal}"
                app:progressValue="@{habit.progress}"/>

            <!-- BUTTON -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMinus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/minus_symbol"
                    android:textSize="25sp"
                    android:onClick="@{() -> listener.onMinusClick(habit)}"
                    app:minusEnabled="@{habit.progress}"
                    app:cornerRadius="25dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPlus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/plus_symbol"
                    android:textSize="25sp"
                    android:onClick="@{() -> listener.onPlusClick(habit)}"
                    app:plusEnabled="@{habit}"
                    app:cornerRadius="25dp"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>